tests/fixtures/invalid/pow_str_list_int.py
# Cannot call pow() with Str, List[int], Int
x = pow("hello", [1, 2, 3], 1)
